--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="" />
     <meta name="author" content="" />
-    <title ng-bind="'Project Name | '+template.title">Project Name</title>
+    <title ng-bind="'Employee Management System | '+template.title">
+      Employee Management System
+    </title>
     <link rel="shortcut icon" href="img/favicon.ico" />
     <link rel="stylesheet" type="text/css" href="css/main.css" />
     <script>
